biom pkl contain only feces samples

--- a/2.21.ryan_i/data_join_workflow.ipynb
+++ b/2.21.ryan_i/data_join_workflow.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "(26009, 597)"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "[3 rows x 597 columns]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "1  10317.000001001  0b0832aafb76068d           10317"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -746,7 +746,7 @@
        "1  10317.000001001  0b0832aafb76068d"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "(0, 597)"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "1           1        12914  000a1da7d9d7e35b     ANTIBIOTIC_MED  Zymar (gatifloxacin) eye drop (NOT ORAL)                1      J01MA16    J  Antiinfectives for systemic use  Gatifloxacin    NaN"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "12668       12668         1000  48c83b76031b7580    MEDICATION_LIST  lexapro amitriptoline welbutrin                3      N06AX12    N  Nervous system     Bupropion  False"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
        "1       1001  10317.000001001"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
        "1      12914  "
       ]
      },
-     "execution_count": 218,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
        "(50519, 13)"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
        "4    NaN  "
       ]
      },
-     "execution_count": 221,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
        "1       1001"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1898,7 +1898,7 @@
        "[2 rows x 276 columns]"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
        "1   True  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2103,7 @@
        "1   True  "
       ]
      },
-     "execution_count": 227,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2325,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2334,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2350,7 @@
        "(18305, 111508)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2362,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2371,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2427,19 +2427,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### test merge between biom data and metadata"
+    "#### test merge between biom data and metadata where we do left join from metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18273, 3)\n"
+      "(20731, 3)\n"
      ]
     },
     {
@@ -2491,39 +2491,97 @@
        "1  10317.000001001       1001  10317.000001001.59277"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merge_df4 = pd.merge(meta_agp_df[['sample_name', 'sample_id']], \n",
-    "                     biom_join_df[['sample_name', 'sample_id']], how='right', on='sample_id')\n",
+    "                     biom_join_df[['sample_name', 'sample_id']], how='left', on='sample_id')\n",
     "print(merge_df4.shape)\n",
     "merge_df4.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sample_name_x    2155\n",
+       "sample_name_x       0\n",
        "sample_id           0\n",
-       "sample_name_y       0\n",
+       "sample_name_y    4613\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merge_df4.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "any nulls above in sample_name_y are the number of missing sample_ids in biom OTU df from samples in the metadata, it is expected there are some since the biom df is not filtered on feces only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16118, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "merge4_df = merge_df4.dropna()\n",
+    "print(merge4_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we want to filter the biom dataframe on sample_ids only found in our cleaned up metadata df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_biom_df = biom_join_df[biom_join_df['sample_id'].isin(merge4_df['sample_id'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16118, 111509)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_biom_df.shape)"
    ]
   },
   {
@@ -2551,16 +2609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "biom_join_df.to_pickle(output_dir + '2.21.rar1000_clean_biom.pkl')"
+    "final_biom_df.to_pickle(output_dir + '2.21.rar1000_clean_biom.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2569,14 +2627,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18273, 111509)\n"
+      "(16118, 111509)\n"
      ]
     }
    ],
