--- a/VioAndMetadata_Cleaning/metadataImputationAnalysisAGP.ipynb
+++ b/VioAndMetadata_Cleaning/metadataImputationAnalysisAGP.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3012,7 +3012,7 @@
        "[19439 rows x 142 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3024,7 +3024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3033,7 +3033,7 @@
        "47"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3053,7 +3053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3123,7 +3123,7 @@
        "Length: 142, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3145,7 +3145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3157,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5515,22 +5515,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ True, False, False, ..., False, False, False],\n",
-       "       [ True, False, False, ..., False, False, False],\n",
-       "       [False, False, False, ..., False,  True, False],\n",
+       "array([[False, False, False, ..., False, False,  True],\n",
+       "       [False, False, False, ..., False,  True,  True],\n",
+       "       [False, False, False, ..., False, False, False],\n",
        "       ...,\n",
-       "       [False, False, False, ..., False, False, False],\n",
-       "       [False, False, False, ..., False, False, False],\n",
-       "       [False, False, False, ..., False,  True, False]])"
+       "       [False, False, False, ..., False,  True,  True],\n",
+       "       [ True, False, False, ..., False,  True,  True],\n",
+       "       [ True, False, False, ..., False, False, False]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5548,22 +5548,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.,  0.,  0., ..., 72.,  0.,  4.],\n",
-       "       [ 1., nan, nan, ..., 70.,  3.,  3.],\n",
+       "array([[ 0.,  0., nan, ..., 72.,  0.,  4.],\n",
+       "       [ 1., nan,  0., ..., 70.,  3.,  3.],\n",
        "       [ 0., nan, nan, ..., 95.,  1.,  4.],\n",
        "       ...,\n",
-       "       [ 0., nan, nan, ..., 61.,  1.,  3.],\n",
-       "       [ 0., nan,  0., ..., 77.,  3.,  2.],\n",
-       "       [ 0., nan, nan, ..., 56.,  0.,  4.]])"
+       "       [ 0.,  0.,  0., ..., 61.,  1.,  3.],\n",
+       "       [ 0.,  0., nan, ..., 77.,  3.,  2.],\n",
+       "       [ 0.,  0.,  0., ..., 56.,  0.,  4.]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5574,56 +5574,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "(47, 139)\n",
-      "[SoftImpute] Max Singular Value of X_init = 3068.024982\n",
-      "[SoftImpute] Iter 1: observed MAE=0.628787 rank=5\n",
-      "[SoftImpute] Iter 2: observed MAE=0.630820 rank=5\n",
-      "[SoftImpute] Iter 3: observed MAE=0.634430 rank=5\n",
-      "[SoftImpute] Iter 4: observed MAE=0.637492 rank=5\n",
-      "[SoftImpute] Iter 5: observed MAE=0.639188 rank=5\n",
-      "[SoftImpute] Iter 6: observed MAE=0.640068 rank=5\n",
-      "[SoftImpute] Iter 7: observed MAE=0.640494 rank=4\n",
-      "[SoftImpute] Iter 8: observed MAE=0.631625 rank=4\n",
-      "[SoftImpute] Iter 9: observed MAE=0.627488 rank=4\n",
-      "[SoftImpute] Iter 10: observed MAE=0.625172 rank=4\n",
-      "[SoftImpute] Iter 11: observed MAE=0.624082 rank=4\n",
-      "[SoftImpute] Iter 12: observed MAE=0.623479 rank=4\n",
-      "[SoftImpute] Iter 13: observed MAE=0.623153 rank=4\n",
-      "[SoftImpute] Iter 14: observed MAE=0.622982 rank=4\n",
-      "[SoftImpute] Iter 15: observed MAE=0.622895 rank=4\n",
-      "[SoftImpute] Iter 16: observed MAE=0.622853 rank=4\n",
-      "[SoftImpute] Iter 17: observed MAE=0.622835 rank=4\n",
-      "[SoftImpute] Stopped after iteration 17 for lambda=61.360500\n",
+      "[SoftImpute] Max Singular Value of X_init = 3065.541914\n",
+      "[SoftImpute] Iter 1: observed MAE=0.631140 rank=5\n",
+      "[SoftImpute] Iter 2: observed MAE=0.632841 rank=5\n",
+      "[SoftImpute] Iter 3: observed MAE=0.634962 rank=5\n",
+      "[SoftImpute] Iter 4: observed MAE=0.637854 rank=5\n",
+      "[SoftImpute] Iter 5: observed MAE=0.639624 rank=5\n",
+      "[SoftImpute] Iter 6: observed MAE=0.640517 rank=5\n",
+      "[SoftImpute] Iter 7: observed MAE=0.638653 rank=4\n",
+      "[SoftImpute] Iter 8: observed MAE=0.631537 rank=4\n",
+      "[SoftImpute] Iter 9: observed MAE=0.627602 rank=4\n",
+      "[SoftImpute] Iter 10: observed MAE=0.625170 rank=4\n",
+      "[SoftImpute] Iter 11: observed MAE=0.623699 rank=4\n",
+      "[SoftImpute] Iter 12: observed MAE=0.622828 rank=4\n",
+      "[SoftImpute] Iter 13: observed MAE=0.622317 rank=4\n",
+      "[SoftImpute] Iter 14: observed MAE=0.622019 rank=4\n",
+      "[SoftImpute] Iter 15: observed MAE=0.621846 rank=4\n",
+      "[SoftImpute] Iter 16: observed MAE=0.621745 rank=4\n",
+      "[SoftImpute] Stopped after iteration 16 for lambda=61.310838\n",
       "(47, 139)\n",
-      "Soft Imputer norm minimization MSE: 0.039452\n"
+      "Soft Imputer norm minimization MSE: 0.037812\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "         7.20000000e+01,  0.00000000e+00,  4.00000000e+00],\n",
-       "       [ 1.00000000e+00,  3.36393755e-15,  2.89561077e-01, ...,\n",
-       "         7.00000000e+01,  3.00000000e+00,  3.00000000e+00],\n",
-       "       [ 0.00000000e+00,  3.06014415e-14,  2.91158600e-01, ...,\n",
-       "         9.50000000e+01,  1.00000000e+00,  4.00000000e+00],\n",
+       "array([[0.00000000e+00, 0.00000000e+00, 7.37990610e-02, ...,\n",
+       "        7.20000000e+01, 0.00000000e+00, 4.00000000e+00],\n",
+       "       [1.00000000e+00, 3.19130694e-02, 0.00000000e+00, ...,\n",
+       "        7.00000000e+01, 3.00000000e+00, 3.00000000e+00],\n",
+       "       [0.00000000e+00, 5.91345838e-02, 5.95124335e-02, ...,\n",
+       "        9.50000000e+01, 1.00000000e+00, 4.00000000e+00],\n",
        "       ...,\n",
-       "       [ 0.00000000e+00,  2.69016158e-14,  2.84307738e-01, ...,\n",
-       "         6.10000000e+01,  1.00000000e+00,  3.00000000e+00],\n",
-       "       [ 0.00000000e+00,  3.60756227e-14,  0.00000000e+00, ...,\n",
-       "         7.70000000e+01,  3.00000000e+00,  2.00000000e+00],\n",
-       "       [ 0.00000000e+00, -7.79768943e-15,  3.02292024e-01, ...,\n",
-       "         5.60000000e+01,  0.00000000e+00,  4.00000000e+00]])"
+       "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "        6.10000000e+01, 1.00000000e+00, 3.00000000e+00],\n",
+       "       [0.00000000e+00, 0.00000000e+00, 8.20711245e-02, ...,\n",
+       "        7.70000000e+01, 3.00000000e+00, 2.00000000e+00],\n",
+       "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "        5.60000000e+01, 0.00000000e+00, 4.00000000e+00]])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10691,6 +10697,120 @@
     "X_filled_knnReal = knnImpute.fit_transform(agpDF.values)\n",
     "#.reset_index().drop(['sample_name','host_subject_id'],axis=1)\n",
     "X_filled_knnReal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15551, 142)\n",
+      "(3888, 142)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.60118926e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
+       "         5.20000000e+01,  0.00000000e+00,  2.00000000e+00],\n",
+       "       [ 8.22296287e-02,  0.00000000e+00,  0.00000000e+00, ...,\n",
+       "         1.10000000e+02,  2.31901810e+00,  2.38640035e+00],\n",
+       "       [ 1.27505198e-01,  0.00000000e+00,  0.00000000e+00, ...,\n",
+       "         5.60000000e+01,  2.17855972e+00,  2.18701154e+00],\n",
+       "       ...,\n",
+       "       [ 2.65342305e-01,  0.00000000e+00,  0.00000000e+00, ...,\n",
+       "         7.80000000e+01,  2.00000000e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
+       "         6.60000000e+01,  2.00000000e+00,  1.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
+       "         6.90000000e+01,  1.00000000e+00,  3.00000000e+00]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Custom for splitting the IBD folks and the non IBD in a 20 and 80 test and training\n",
+    "import math\n",
+    "trainImputeSize=math.floor(agpDF.shape[0]*.8)\n",
+    "newAgpDFForImpute=agpDF[0:trainImputeSize]\n",
+    "newAgpDFForTest=agpDF[trainImputeSize:]\n",
+    "print(newAgpDFForImpute.shape)\n",
+    "print(newAgpDFForTest.shape)\n",
+    "\n",
+    "X_filled_softNewImp = IterativeImputer()\n",
+    "X_filled_knnRealNewImputFit = X_filled_softNewImp.fit(newAgpDFForImpute.values)\n",
+    "X_filled_knnRealNewImputTransTrain=X_filled_knnRealNewImputFit.transform(newAgpDFForImpute.values)\n",
+    "#.reset_index().drop(['sample_name','host_subject_id'],axis=1)\n",
+    "X_filled_knnRealNewImputTransTrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.,   0.,   0., ...,  67.,   3.,   3.],\n",
+       "       [  0.,   0.,   0., ..., 160.,   3.,   0.],\n",
+       "       [  0.,   0.,   0., ...,  72.,   1.,   1.],\n",
+       "       ...,\n",
+       "       [  1.,   0.,   0., ...,  70.,   1.,   2.],\n",
+       "       [  0.,   0.,   0., ...,  87.,   0.,   2.],\n",
+       "       [  0.,   0.,   0., ..., 102.,   2.,   2.]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_filled_knnRealNewImputTransTEST=X_filled_knnRealNewImputFit.transform(newAgpDFForTest.values)\n",
+    "X_filled_knnRealNewImputTransTEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "142\n",
+      "141\n"
+     ]
+    }
+   ],
+   "source": [
+    "#For the custom train & test save!!\n",
+    "fixedColumnsRemoveFailed=list(newAgpDFForImpute.columns)\n",
+    "print(len(fixedColumnsRemoveFailed))\n",
+    "fixedColumnsRemoveFailed.remove('food_special_unspecified')\n",
+    "print(len(fixedColumnsRemoveFailed))\n",
+    "knnRealResultsDFTRAIN=pd.DataFrame(X_filled_knnRealNewImputTransTrain,columns=fixedColumnsRemoveFailed).apply(np.round)\n",
+    "dfOfNameNSubject=newAgpDFForImpute.reset_index()[['sample_name','host_subject_id']]\n",
+    "knnRealResultsDFTRAIN['sample_name']=dfOfNameNSubject['sample_name']\n",
+    "knnRealResultsDFTRAIN['host_subject_id']=dfOfNameNSubject['host_subject_id']\n",
+    "knnRealResultsDFTRAIN=knnRealResultsDFTRAIN.set_index(['sample_name','host_subject_id'])\n",
+    "knnRealResultsDFTRAIN.to_csv('resultsKNNImputationOnAGPmetadataTRAIN80.csv')\n",
+    "\n",
+    "knnRealResultsDFTEST=pd.DataFrame(X_filled_knnRealNewImputTransTEST,columns=fixedColumnsRemoveFailed).apply(np.round)\n",
+    "dfOfNameNSubject=newAgpDFForTest.reset_index()[['sample_name','host_subject_id']]\n",
+    "knnRealResultsDFTEST['sample_name']=dfOfNameNSubject['sample_name']\n",
+    "knnRealResultsDFTEST['host_subject_id']=dfOfNameNSubject['host_subject_id']\n",
+    "knnRealResultsDFTEST=knnRealResultsDFTEST.set_index(['sample_name','host_subject_id'])\n",
+    "knnRealResultsDFTEST.to_csv('resultsKNNImputationOnAGPmetadataTEST20.csv')"
    ]
   },
   {
