pCoA body site classication log regression

--- a/beta_diversity_pcOa/pcOa_results.ipynb
+++ b/beta_diversity_pcOa/pcOa_results.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -31,6 +31,7 @@
     "from biom import load_table\n",
     "\n",
     "from io import StringIO\n",
+    "import skbio\n",
     "from skbio import TreeNode\n",
     "from skbio.diversity.beta import unweighted_unifrac"
    ]
